<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:scrollbars="vertical">


    <TextView
        android:id="@+id/intro"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:rotationX="25"
        android:text="@string/intro_text_1"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/UserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <EditText
        android:id="@+id/UserName"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginStart="2dp"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.337" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginBottom="111dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserName"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="152dp"
        android:layout_height="71dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="130dp"
        android:layout_marginHorizontal="10dp"
        android:onClick="login"
        android:text="@string/login"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        tools:text="Bejelentkezés"
        tools:visibility="visible" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="152dp"
        android:layout_height="71dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="130dp"
        android:onClick="register"
        android:text="@string/register"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        tools:text="Regisztráció"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>