<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/phoneTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageItem"
            android:layout_marginBottom="12dp"
            android:padding="6dp"
            android:text="@string/placeholder"
            />
        <TextView
            android:id="@+id/phoneDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneTitle"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/phonePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneDesc"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:layout_centerHorizontal="true"
            />
<LinearLayout
    android:id="@+id/buttons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/phonePrice">
        <Button
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/addCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addToCart" />
    <Button
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/removeItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/removeItem"
        />
</LinearLayout>
        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttons">
            <EditText
                android:hint="Új ár"
                android:inputType="number"
                android:id="@+id/newPrice"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>
            <Button
                android:text="Beállít"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/updatePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>